@@ -1,12 +1,14 @@
 {-# LANGUAGE ScopedTypeVariables, FlexibleInstances, MultiParamTypeClasses, UndecidableInstances, ExistentialQuantification, Rank2Types, CPP #-}
 
 {- |
-    /RECOMMENDATION/: Use "Data.Generics.Uniplate.Data" instead.
+    /DEPRECATED/: Use "Data.Generics.Uniplate.Data" instead.
 
     This module exports 'Biplate' instances for everything with 'Data' defined.
     Using GHC the 'Data' instances can be constructed with @deriving Data@.
 -}
-module Data.Generics.PlateData(
+module Data.Generics.PlateData
+    {-# DEPRECATED "Use Data.Generics.Uniplate.Data instead" #-}
+    (
     module Data.Generics.Biplate
     ) where
 
