@@ -1,5 +1,5 @@
 {- |
-/RECOMMENDATION/: Use "Data.Generics.Uniplate.Operations" instead.
+/DEPRECATED/: Use "Data.Generics.Uniplate.Operations" instead.
 
 This is the main Uniplate module, which defines all the essential operations
 in a Haskell 98 compatible manner.
@@ -13,7 +13,9 @@ To illustate, I have used the @Expr@ type as below:
 -}
 
 
-module Data.Generics.UniplateStr(
+module Data.Generics.UniplateStr
+    {- DEPRECATED "Use Data.Generics.Uniplate.Operations instead" -}
+    (
     module Data.Generics.UniplateStr,
     module Data.Generics.Str
     ) where
